[gd_scene load_steps=20 format=2]

[ext_resource path="res://nodes/entity/Enemies/EntityEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/enemies/jamminger/spr_ene_jamminger.png" type="Texture" id=2]
[ext_resource path="res://scripts/entity/Enemy/Entity_Enemy_Jamminger.gd" type="Script" id=3]

[sub_resource type="Shader" id=29]
code = "shader_type canvas_item;

uniform float color_palette_modifier : hint_range(0.0, 1.0) = 0.0;

uniform int numberOfColors : hint_range(1, 3);
uniform vec4 C1 : hint_color;
uniform vec4 C2 : hint_color;
uniform vec4 C3 : hint_color;


void fragment(){
	vec4 referenceColors[12];
	referenceColors[0] = C1;
	referenceColors[1] = C2;
	referenceColors[2] = C3;

	
	vec4 textureColor = texture(TEXTURE, UV);
	

	COLOR.rgb = mix(textureColor.rgb,referenceColors[int(floor(textureColor.r * float(numberOfColors)))].rgb,color_palette_modifier);
	COLOR.a = textureColor.a;

}"

[sub_resource type="ShaderMaterial" id=30]
resource_local_to_scene = true
shader = SubResource( 29 )
shader_param/color_palette_modifier = 0.0
shader_param/numberOfColors = 3
shader_param/C1 = Color( 0.34552, 0.796875, 0.766275, 1 )
shader_param/C2 = Color( 0.556863, 0.901961, 0.878431, 1 )
shader_param/C3 = Color( 0.803922, 0.945098, 1, 1 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 42, 42 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 42, 0, 42, 42 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 42, 42 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 84, 0, 42, 42 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 126, 0, 42, 42 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "default",
"speed": 14.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 40 ) ],
"loop": true,
"name": "laugh",
"speed": 14.0
} ]

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 0, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 42, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 84, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 126, 42, 42, 42 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=42]

[sub_resource type="RectangleShape2D" id=43]

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 13, 14.5 )

[node name="EntityEnemy" instance=ExtResource( 1 )]
collision_mask = 0
script = ExtResource( 3 )
hp_max = null
hp = 100
gravityenabled = false
UseDamageTable = null
Die_On_0_HP = null
infinite_inertia = null
invulnerable_time = null
Movement_Speed = 110
Flip_Sprite_To_Match_Direction = null
DropItem = null
smoke_on_low_health = null
sprite_size = null
long_death = null
enemy_reaction_time = null

[node name="Sprite" parent="." index="0"]
material = SubResource( 30 )
frames = SubResource( 33 )
frame = 1
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprite" index="0"]
frames = SubResource( 38 )
frame = 3
playing = true

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource( 42 )

[node name="Hurtbox" parent="." index="4"]
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 43 )

[node name="Hitbox" parent="." index="5"]
collision_layer = 4
collision_mask = 2
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 2.5 )
shape = SubResource( 44 )

[node name="Tween" type="Tween" parent="." index="7"]

[node name="Idle_timer" type="Timer" parent="." index="8"]
process_mode = 0
one_shot = true

[node name="Knockback_timer" type="Timer" parent="." index="9"]
process_mode = 0
wait_time = 0.23
one_shot = true

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="damage_dealt" from="Hitbox" to="." method="_on_Hitbox_damage_dealt"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Idle_timer" to="." method="_on_Idle_timer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
